# dbt-with-spark-thrift-server

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
hive/: .env-example  Dockerfile.hive  run.sh
hive/example/: hive-catalog-delta.ipynb  hive-catalog-iceberg.ipynb  hive-catalog.ipynb
minio/: .env-example  createbucket.sh
parking_lot/: README.md  entrypoint_external_master.sh  entrypoint_thrift_delta.sh  entrypoint_thrift_delta_iceberg.sh  entrypoint_thrift_iceberg.sh
parking_lot/pure_hive/: .env-example  Dockerfile  entrypoint.sh
parking_lot/pure_hive/config/: spark-defaults.conf
parking_lot/pure_hive/dbt_config/: dbt_project.yml  profiles.yml
spark_dbt_project/: .user.yml  dbt_project.yml  profiles.yml
spark_dbt_project/models/delta/: delta_orders.sql
spark_dbt_project/models/example/: my_first_dbt_model.sql
spark_dbt_project/models/iceberg/: iceberg_events.sql
spark_dbt_project/models/parquet/: my_first_dbt_model.sql  parquet_logs.sql
thrift_server/: .env-example  Dockerfile  README.md  download_jars.sh  entrypoint.sh
