[project]
name = "dbt-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-hive>=1.9.0",
    "dbt-spark[pyhive]>=1.9.3",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pyspark==3.5.4",
    "python-dotenv>=1.1.1",
]
